Significant change and java doc complete