@@ -1,5 +1,6 @@
 package org.decioamador.generator.excel;
 
+import java.awt.Point;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -18,7 +19,7 @@ import org.apache.poi.hssf.usermodel.HSSFCell;
 import org.apache.poi.hssf.usermodel.HSSFRow;
 import org.apache.poi.hssf.usermodel.HSSFSheet;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
-import org.decioamador.generator.excel.model.ExcelOption;
+import org.decioamador.generator.excel.model.ExcelOptionPOI;
 
 /**
  * This class is an implementation using org.apache.poi
@@ -30,9 +31,10 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 	private static final Object[] EMPTY_ARRAY_OBJECT = new Object[0];
 	private static final String GET = "get";
 	
-	private int initialPosition = 0;
+	private int initPosRow = 0;
+	private int initPosCol = 0;
 	private Boolean autosize = false;
-	private String dateFormat = "yyyy-MM-dd hh:mm:ss";
+	private String dateFormat = "yyyy-MM-dd";
 	private DateFormat sdf; 
 	
 	private HSSFWorkbook wb;
@@ -47,32 +49,42 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 		postConstruct();
 	}
 	
-	public ExcelGeneratorPOI(Map<ExcelOption,Object> options) {
+	public ExcelGeneratorPOI(Map<ExcelOptionPOI,Object> options) {
 		resolveOptions(options);
 		postConstruct();
 	}
 	
 	/**
 	 * Resolves the options available
+	 * 
 	 * @param options
+	 *            Options of the this implementation
 	 */
-	private void resolveOptions(Map<ExcelOption,Object> options){
-		for(Entry<ExcelOption, Object> option : options.entrySet()){
+	private void resolveOptions(Map<ExcelOptionPOI,Object> options){
+		for(Entry<ExcelOptionPOI, Object> option : options.entrySet()){
 			if(option.getValue() != null){
 				switch(option.getKey()){
 					case DATE_FORMAT :
 						if(option.getValue() instanceof String){
 							dateFormat = option.getValue().toString();
+						} else {
+							throw new IllegalArgumentException("Date format isn't a String");
 						}
 						break;
 					case INICIAL_POSITION:
-						if(option.getValue() instanceof Integer){
-							initialPosition = Integer.valueOf(option.getValue().toString());
+						if(option.getValue() instanceof Point){
+							Point p = (Point) option.getValue();
+							initPosRow = new Double(p.getX()).intValue();
+							initPosCol = new Double(p.getY()).intValue();
+						} else {
+							throw new IllegalArgumentException("Inicial position isn't a Point");
 						}
 						break;
 					case AUTOSIZE_COLUMNS:
 						if(option.getValue() instanceof Boolean){
 							autosize = Boolean.valueOf(option.getValue().toString());
+						} else {
+							throw new IllegalArgumentException("Autosize isn't a Boolean");
 						}
 						break;
 				}
@@ -81,8 +93,8 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 	}
 
 	/**
-	 * It should work like the annotation that I didn't use so that this can
-	 * still be used in Java SE.
+	 * It should work like the annotation that I didn't use it, 
+	 * so this can still be used in Java SE.
 	 */
 	private void postConstruct(){
 		sdf = new SimpleDateFormat(dateFormat);
@@ -94,8 +106,7 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 	@Override
 	public void generate(List<?> objs, List<String> columns, List<String> fields, 
 			Set<String> fieldsToTranslate, Map<String,String> translator) throws Exception {
-		boolean toTranslate = false;
-		int rowNum = initialPosition, columnNum = initialPosition;
+		int rowNum = initPosRow, columnNum = initPosCol;
 		
 		Object o = null;
 		Class<?> clazz;
@@ -103,10 +114,6 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 		
 		HSSFRow row;
 		HSSFCell cell;
-		
-		if(columns.size() != fields.size()){
-			throw new IllegalArgumentException("The columns don't have the same size as the fields");
-		}
 		
 		// Put titles
 		row = ws.createRow(rowNum++);
@@ -118,7 +125,7 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 		// Put values
 		for(Object obj : objs){
 			clazz = obj.getClass();
-			columnNum = initialPosition;
+			columnNum = initPosCol;
 			row = ws.createRow(rowNum++);
 			for(String field : fields){
 				String [] mthds = field.split("[.]");
@@ -134,16 +141,13 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 					}
 				}
 				cell = row.createCell(columnNum++);
-				if(fieldsToTranslate != null){
-					toTranslate = fieldsToTranslate.contains(field);
-				}
-				cell.setCellValue(getValue(o, toTranslate, translator));
+				cell.setCellValue(getValue(o, field, fieldsToTranslate, translator));
 			}
 		}
 		
 		// Autosize
 		if(autosize){
-			for(int i = initialPosition; i <= columnNum; i++){
+			for(int i = initPosCol; i <= columnNum; i++){
 				ws.autoSizeColumn(i);
 			}
 		}
@@ -151,14 +155,20 @@ public class ExcelGeneratorPOI implements ExcelGenerator  {
 	
 	/**
 	 * This methods makes the textual representation of a value
+	 * 
 	 * @param obj
-	 * @param toTranslate
+	 *            Object to process
+	 * @param field
+	 *            Field to process
+	 * @param fieldsToTranslate
+	 *            Fields to translate
 	 * @param translator
-	 * @return String 
+	 *            It has the the key and the translation value
+	 * @return String the representation value of the object
 	 */
-	private String getValue(Object obj, boolean toTranslate, Map<String,String> translator){
+	private String getValue(Object obj, String field, Set<String> fieldsToTranslate, Map<String,String> translator){
 		if(obj != null){
-			if(toTranslate){
+			if(fieldsToTranslate.contains(field)){
 				return translator.get(obj.toString());
 			} else if(obj instanceof Date){
 				return sdf.format((Date) obj);
